[output2] refactoring and clean up